fixed menu overlap, and moved header image and menu to search page rather than layout

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -816,7 +816,6 @@ $subfilter-size: .8em;
   .side-panel-wrapper{
     padding: 0;
     width: 240px;
-    z-index: 9;
 
     .filter-group{
 
